fix overflow positioning

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body, html {
 	height: 100%;
   	-ms-overflow-style: none;
   	scrollbar-width: none;
+  	overflow: auto;
 }
 
 .intro-name {
